--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap-less": "^3.3.8",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
