--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-js-pagination": "^3.0.2",
+    "react-overlays": "^0.9.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
